# Margin

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml  dist-workspace.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: advisories.yml  ci.yml  fuzz.yml  release.yml
assets/: demo-env.sh  demo.tape
crates/margin/: Cargo.toml
crates/margin-core/: Cargo.toml
crates/margin-core/benches/: parse.rs
crates/margin-core/src/: ansi.rs  collapse.rs  digest.rs  intraline.rs  json.rs  lib.rs  model.rs  patch.rs  render.rs
crates/margin-core/tests/: corpus.rs
crates/margin-core/tests/corpus/: add-delete.patch  binary.patch  log-with-junk.patch  no-newline.patch  plain-unified.patch  quoted-path.patch  rename.patch  simple-modify.patch
crates/margin-tui/: Cargo.toml
crates/margin-tui/benches/: first_frame.rs
crates/margin-tui/src/: app.rs  highlight.rs  keymap.rs  lib.rs  runtime.rs  theme.rs
crates/margin-tui/src/view/: diff.rs  help.rs  mod.rs  picker.rs  sidebar.rs  split.rs  style.rs  wrap.rs
crates/margin-tui/tests/: theme_rendering.rs  ui_snapshots.rs
crates/margin-tui/tests/snapshots/: ui_snapshots__confirmed_search_shows_badge_and_jumps.snap  ui_snapshots__cursor_scrolls_into_view_at_bottom.snap  ui_snapshots__discard_flow_requires_typed_yes.snap  ui_snapshots__empty_changeset.snap  ui_snapshots__forced_split_at_80_cols_via_v.snap  ui_snapshots__help_overlay.snap  ui_snapshots__lockfile_auto_collapses_to_header_only.snap  ui_snapshots__narrow_40x20_hides_sidebar.snap  ui_snapshots__navigation_flow_lands_on_second_file.snap  ui_snapshots__picker_overlay_filters.snap  ui_snapshots__search_bar_while_typing.snap  ui_snapshots__sidebar_marks_staged_files.snap  ui_snapshots__sidebar_toggled_off.snap  ui_snapshots__split_auto_at_160_cols.snap  ui_snapshots__stage_request_result_and_clear_flow.snap  ui_snapshots__standard_80x24.snap  ui_snapshots__wide_200x50.snap  ui_snapshots__wrapped_cursor_fully_visible_at_bottom.snap  ui_snapshots__wrapped_split_80_cols.snap  ui_snapshots__wrapped_unified_80_cols.snap
crates/margin-vcs/: Cargo.toml
crates/margin-vcs/src/: discard.rs  files.rs  gh.rs  git.rs  lib.rs  staging.rs
crates/margin-vcs/tests/: discard.rs  git_sources.rs  staging.rs
crates/margin/src/: config.rs  main.rs  viewed.rs
crates/margin/tests/: cli.rs
docs/: BLUEPRINT.md  architecture.md  configuration.md  json-output.md  keybindings.md  themes.md
docs/adr/: 0001-rust.md  0002-ratatui-crossterm.md  0003-elm-architecture.md  0004-workspace-crates.md  0005-git2-behind-trait.md  0006-syntect-similar.md  0007-cli-design.md  0008-config-toml.md  0009-error-handling.md  0010-testing-strategy.md  0011-release-distribution.md  0012-license.md  0013-hunk-staging-safety.md  0014-discard-safety.md  0015-forge-via-gh.md  README.md  template.md
fuzz/: Cargo.toml  seed.sh
fuzz/fuzz_targets/: intraline.rs  parse_unified.rs  strip_ansi.rs
