[package]
name = "margin-core"
description = "Pure diff model, unified-diff parser, and intra-line diffing for Margin. No I/O, no TUI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Kept I/O-free by design (ADR 0003/0004). Allowed deps: data-only crates.
similar.workspace = true
serde.workspace = true # the --json schema (issue #22)

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true

[lib]
bench = false
