[package]
name = "margin-tui"
description = "Elm-architecture TUI for Margin: state, update, views, themes, keymaps. Depends on margin-core only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
margin-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
# syntect.workspace = true   # enabled by issue #4

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
