[package]
name = "margin-tui"
description = "Elm-architecture TUI for Margin: state, update, views, themes, keymaps. Depends on margin-core only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
margin-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
syntect.workspace = true

[dev-dependencies]
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "first_frame"
harness = false

[lints]
workspace = true

[lib]
bench = false
