[package]
name = "margin-vcs"
description = "DiffSource trait and implementations (git2, two-file, stdin patch) producing margin-core changesets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
margin-core.workspace = true
git2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
