[package]
name = "margin-cli"
description = "A fast, keyboard-first terminal diff viewer for Git changes, patches, and AI-authored code."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "margin"
path = "src/main.rs"
bench = false

[dependencies]
margin-core.workspace = true
margin-vcs.workspace = true
margin-tui.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Building real repos for `margin undo` binary tests.
git2.workspace = true

[lints]
workspace = true
